--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Bijan Boustani",
   "license": "ISC",
   "devDependencies": {
+    "elm-hot": "^1.1.0",
+    "node-elm-compiler": "^5.0.3",
     "parcel-bundler": "^1.12.3"
   }
 }
