--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "elm-hot": "^1.1.0",
     "node-elm-compiler": "^5.0.3",
-    "parcel-bundler": "^1.12.3"
+    "parcel-bundler": "^1.12.3",
+    "tailwindcss": "^1.0.5"
   }
 }
